[package]
name = "tf2-surveillance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a2s = "0.5.2"
argh = "0.1.12"
chrono = "0.4.31"
json = "0.12.4"
owo-colors = "3.5.0"
serde = "1.0.190"
ureq = "2.8.0"

