[package]
name = "tf2-surveillance"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tf2-scan"
path = "src/tf2-scan.rs"

[[bin]]
name = "tf2-analysis"
path = "src/tf2-analysis.rs"

[dependencies]
a2s = "0.5.2"
argh = "0.1.12"
chrono = "0.4.31"
json = "0.12.4"
rayon = "1.8.0"
rusqlite = "0.31.0"
serde = "1.0.190"
serde_derive = "1.0.190"
toml = "0.8.6"
ureq = "2.8.0"

